KODLUYORUZ HTML ÖDEV

--- a/index.html
+++ b/index.html
@@ -1,5 +1,37 @@
-Emeğinize Sağlik Teşekküler
+<title>Patike.dev Html İlk Ödev</title>
+<!-- Sekme başlığı koydum burada, daha bir vurgulu olur diye düşündüm -->
+<h1>Gökay Öziş</h1>
 
-:)
+<h2>Hakkımda</h2>
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ullam porro fugit deserunt nostrum minima ea. Impedit illum libero illo! Illum soluta in quis tempora culpa eveniet maxime accusantium voluptates.
+<p>Merhaba ben Gökay Öziş. İstanbulda yaşıyorum, ama yakın zamanda İngiltereye taşınacağım.</p>
+
+<!-- burda kompozisyon yazım teknikleri kullanmak için bir giriş daha sonrasında ise ana konuyu anlatmak için 2 ayrı paragraf etiketi açtım. -->
+
+<p>Sakarya Üniversitesi, Metalurji ve Malzeme Mühendisliği bölümünü 3.Sınıfta bıraktım. MSA'da profesyonel aşçılık eğitimi alarak kariyerime 12 sene "Aşçı" olarak devam ettim.
+Yazılım ile ilgileniyorum. Bir çok kurs ve uygulamalı ders alıyorum. İlk olarak Patika.dev ile bu yolculuğa başladım ve çok mutluyum. Şu and başlangıç seviyesi Frontend Patikasındayım. Daha sonra React Native ile uygulama geliştirme patikasına devam edeceğim.</p>
+
+<p>Patika ailesine en içten sayılarım ve sevgilerim ile SELAMLAR!!</p>
+<!-- Tekrardan son söz için ayrı bir etiket açıp sayfa düzeni oluşturmak istedim -->
+
+<h2> Hedeflerim</h2>
+
+<!-- Bu kısımda daha önce keywords ve trick videoları izlerken öğrendiğim listeleme elemanını kullanmak istedim. -->
+
+<p> <li> Eğitimlerimi tamamlayıp bootcamplere katılmak.</li>
+    <li> Patikanın eğitimlerini, network ağını ve bana kattıklarını bir araç ve güçlü bir birikim olarak kullanmak ve bu şekilde başarıya ulaşmak.</li>
+    <li>Yazılım alanında başarılı bir kariyer edinmek.</li>
+    <li>İlk 8 ay da başlangıç işimi bulmak.</li>
+    <li>2 sene içinde Github profilimi ve Network ağımı geliştirip ve genişletim, farklı projelerde çalışmak.</li>
+
+<h2>İlgilendiğim Alanlar</h2>
+<p>
+    <li> Frontend </li>
+    <li> Mobil Uygulama</li>
+    <li> Oyun Yazılımcılığı</li>
+
+</p>
+
+<h2>İlgilendiğim Diller</h2>
+
+<p>Html, Css, Javascript, Python </p>
